# slice-group-by

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: binary_group_by.rs  exponential_group_by.rs  lib.rs  linear_group_by.rs  linear_str_group_by.rs
src/binary_group/: binary_group_by.rs  binary_group_by_key.rs  mod.rs
src/exponential_group/: exponential_group_by.rs  exponential_group_by_key.rs  mod.rs
src/linear_group/: linear_group.rs  linear_group_by.rs  linear_group_by_key.rs  mod.rs
src/linear_str_group/: linear_str_group_by.rs  linear_str_group_by_key.rs  mod.rs
