[package]
edition = "2018"
name = "slice-group-by"
description = "Iterators over groups in slices and strs"
version = "0.3.1"
documentation = "https://docs.rs/slice-group-by"
repository = "https://github.com/Kerollmops/slice-group-by"
authors = ["Kerollmops <renault.cle@gmail.com>"]
license = "MIT"
keywords = ["str", "slice", "group"]
categories = ["algorithms"]

[dev-dependencies]
rand = "0.6.5"

[features]
default = ["std"]
nightly = []
std = []
